manifest/objects/LVGO__Campaign_Automation_Management__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__AHL_Group_ID__c</fullName>
        <description>Created as part of SCDEV-5529</description>
        <inlineHelpText>Group ID for At Home Labs internal programs</inlineHelpText>
        <label>AHL Group ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Allow_Recurring_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Recurring Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Allows_members_to_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Member is opted in by default.</inlineHelpText>
        <label>Allows members to opt out?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Answer1_Action__c</fullName>
        <label>Answer1 Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Action</fullName>
                </value>
                <value>
                    <fullName>Send Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Answer1_Confirmation_Message__c</fullName>
        <label>Answer1 Confirmation Message</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Answer1_Response__c</fullName>
        <label>Answer1 Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Answer1_Text__c</fullName>
        <label>Answer1 Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Answer2_Action__c</fullName>
        <label>Answer2 Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Action</fullName>
                </value>
                <value>
                    <fullName>Send Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Answer2_Confirmation_Message__c</fullName>
        <label>Answer2 Confirmation Message</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Answer2_Response__c</fullName>
        <label>Answer2 Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Answer2_Text__c</fullName>
        <label>Answer2 Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Campaign_Audience_Category__c</fullName>
        <description>&quot;None: Does not segment the eligible population based on enrollment status nor any other qualification. All members from this sponsor (health plan, employer) can generate opt-ins. 
Active-30: have logged ingto web or mobile app, and/or used BG meter in last 30 days
Inactive: have not logged in to mobile or web, nor used BG meter in 30 days+
&quot;
Data Owner: Program Management Team</description>
        <label>Campaign Audience Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active-30</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active-30 Group 1 - Inclusion</fullName>
                </value>
                <value>
                    <fullName>Active-30 Group 2 - Exclusion</fullName>
                </value>
                <value>
                    <fullName>Active Group 3</fullName>
                </value>
                <value>
                    <fullName>Active Group 4</fullName>
                </value>
                <value>
                    <fullName>Custom Census File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Campaign_Description__c</fullName>
        <label>Campaign Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meter Message</fullName>
                    <default>true</default>
                    <label>Meter Message</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Client_Member_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Member Code</label>
        <referenceTo>LVGO__ClientMemberCode__c</referenceTo>
        <relationshipLabel>Campaign Automation Management</relationshipLabel>
        <relationshipName>Campaign_Automation_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Code__c</fullName>
        <formula>LVGO__Client_Member_Code__r.LVGO__ClientMemberCode__c</formula>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Custom_Content_Message_Text__c</fullName>
        <label>Custom Content Message Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Enable_Second_Round_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Second Round Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__File_Name__c</fullName>
        <label>File Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Initial_Message_Content__c</fullName>
        <formula>IF(ISPICKVAL(LVGO__Initial_Message__c,&apos;Diabetes Medications&apos;),  $CustomMetadata.LVGO__Campaign_Automation__mdt.LVGO__Diabetes_medications.LVGO__Initial_Message_Content__c , 
		 IF(ISPICKVAL(LVGO__Initial_Message__c,&apos;Diabetes Meds - Adherence talk to a coach&apos;), $CustomMetadata.LVGO__Campaign_Automation__mdt.LVGO__Diabetes_Meds_Adherence_talk_to_a_coach.LVGO__Initial_Message_Content__c,
			IF(ISPICKVAL(LVGO__Initial_Message__c,&apos;Diabetes care - Kidney disease monitoring&apos;),  $CustomMetadata.LVGO__Campaign_Automation__mdt.LVGO__Diabetes_care_Kidney_disease_monitorin.LVGO__Initial_Message_Content__c,
			IF(ISPICKVAL(LVGO__Initial_Message__c,&apos;Managing blood pressure&apos;),  $CustomMetadata.LVGO__Campaign_Automation__mdt.LVGO__Managing_blood_pressure.LVGO__Initial_Message_Content__c, 
			IF(ISPICKVAL(LVGO__Initial_Message__c,&apos;BG-A1c Reminder&apos;),  $CustomMetadata.LVGO__Campaign_Automation__mdt.LVGO__BG_A1c_Reminder.LVGO__Initial_Message_Content__c,
			IF(ISPICKVAL(LVGO__Initial_Message__c,&apos;BG-Smoking Cessation&apos;),  $CustomMetadata.LVGO__Campaign_Automation__mdt.LVGO__BG_Smoking_Cessation.LVGO__Initial_Message_Content__c, 
			IF(ISPICKVAL(LVGO__Initial_Message__c,&apos;BG-Exercise&apos;),  $CustomMetadata.LVGO__Campaign_Automation__mdt.LVGO__BG_Exercise.LVGO__Initial_Message_Content__c,
			IF(ISPICKVAL(LVGO__Initial_Message__c,&apos;BG-Eye Exam&apos;),  $CustomMetadata.LVGO__Campaign_Automation__mdt.LVGO__BG_Eye_Exam.LVGO__Initial_Message_Content__c, 
			IF(ISPICKVAL(LVGO__Initial_Message__c,&apos;BG-Mail Order Meds&apos;),  $CustomMetadata.LVGO__Campaign_Automation__mdt.LVGO__BG_Mail_Order_Meds.LVGO__Initial_Message_Content__c, 
			IF(ISPICKVAL(LVGO__Initial_Message__c,&apos;BG-Preventative Visit&apos;),  $CustomMetadata.LVGO__Campaign_Automation__mdt.LVGO__BG_Preventative_Visit.LVGO__Initial_Message_Content__c, 
			IF(ISPICKVAL(LVGO__Initial_Message__c,&apos;BG-Flu Shot&apos;),  $CustomMetadata.LVGO__Campaign_Automation__mdt.LVGO__BG_Flu_Shot.LVGO__Initial_Message_Content__c, 
			IF(ISPICKVAL(LVGO__Initial_Message__c,&apos;BG-Telehealth&apos;),  $CustomMetadata.LVGO__Campaign_Automation__mdt.LVGO__BG_Telehealth.LVGO__Initial_Message_Content__c, 
			IF(ISPICKVAL(LVGO__Initial_Message__c,&apos;Email - A1c Reminder&apos;),  $CustomMetadata.LVGO__Campaign_Automation__mdt.LVGO__Email_A1c_Reminder.LVGO__Initial_Message_Content__c, &apos;&apos;)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Message Content</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Initial_Message__c</fullName>
        <label>Initial Message</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diabetes Medications</fullName>
                </value>
                <value>
                    <fullName>Diabetes Meds - Adherence talk to a coach</fullName>
                </value>
                <value>
                    <fullName>Diabetes care - Kidney disease monitoring</fullName>
                </value>
                <value>
                    <fullName>Managing blood pressure</fullName>
                </value>
                <value>
                    <fullName>BG-A1c Reminder</fullName>
                </value>
                <value>
                    <fullName>BG-Smoking Cessation</fullName>
                </value>
                <value>
                    <fullName>BG-Exercise</fullName>
                </value>
                <value>
                    <fullName>BG-Eye Exam</fullName>
                </value>
                <value>
                    <fullName>BG-Mail Order Meds</fullName>
                </value>
                <value>
                    <fullName>BG-Preventative Visit</fullName>
                </value>
                <value>
                    <fullName>BG-Flu Shot</fullName>
                </value>
                <value>
                    <fullName>BG-Telehealth</fullName>
                </value>
                <value>
                    <fullName>Email - A1c Reminder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Notification_Type__c</fullName>
        <description>&quot;Definition: Specifies the initial/primary type of channel that will be used to communicate the campaign to the member and if applicable collect their opt-in.

Options Below: 
Meter Message: the selected audience will recieve an invite to opt-in from their BG meter during the eligible period
No Notifciation: Definition: A campaign with &quot;&quot;No Notification&quot;&quot; selected will not send an opt-in invitation to members via the BG meter.&quot;

Data Owner: Program Management Team</description>
        <label>Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meter Message</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Auto-Order Kits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Program__c</fullName>
        <description>Data Owner: Program Management Team
added new feild dependencies</description>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LVGO__Campaign_Audience_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Diabetes</fullName>
                    <default>true</default>
                    <label>Diabetes</label>
                </value>
                <value>
                    <fullName>Hypertension</fullName>
                </value>
                <value>
                    <fullName>Prediabetes</fullName>
                </value>
                <value>
                    <fullName>Weight Management</fullName>
                </value>
                <value>
                    <fullName>Chronic Kidney Disease</fullName>
                </value>
                <value>
                    <fullName>Heart Failure</fullName>
                </value>
                <value>
                    <fullName>Diabetes Deviceflex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Recurring_Order_Frequency__c</fullName>
        <inlineHelpText>Defines the frequency of how often a member can request a kit</inlineHelpText>
        <label>Recurring Order Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Once every 6 months</fullName>
                </value>
                <value>
                    <fullName>Once every 12 months</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Second_Round_Campaign_Days_Delay__c</fullName>
        <label>Second Round Campaign Days Delay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Second_Round_Campaign_Start_Date__c</fullName>
        <label>Second Round Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Non-New York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Test_Type__c</fullName>
        <label>Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HbA1C</fullName>
                    <default>true</default>
                    <label>HbA1C</label>
                </value>
                <value>
                    <fullName>Kidney</fullName>
                </value>
                <value>
                    <fullName>Cholesterol</fullName>
                </value>
                <value>
                    <fullName>Chlamydia</fullName>
                </value>
                <value>
                    <fullName>HbA1C + Kidney</fullName>
                </value>
                <value>
                    <fullName>HbA1C + Cholesterol</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Vendor_Name__c</fullName>
        <description>&quot;None: cannot select none
LetsGetChecked: choosing LGC as the vendor 
&quot;
Data Owner: Program Management Team</description>
        <label>Vendor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LetsGetChecked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Vendor_Program_Code__c</fullName>
        <description>&quot;Program Code is an indentifier that specifies the specific program design to be used by the vendor for a particular order. Key parameters that are set by the program code are: kit type, welcome letter, whether the vendor provides reminders, amoung others.
Because our current vendor requires different collection technologies to be used in different geographies (NY/non-NY) the programCode also specifies geo. As such for a single campaign needs to have multiple Program codes associated with it.&quot;</description>
        <label>Vendor Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LV Campaign Automation Management</label>
    <listViews>
        <fullName>LVGO__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Campaign Automation Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV Campaign Automation Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LVGO__Answer1_Response_Is_Required</fullName>
        <active>true</active>
        <description>Answer1 Response is required if the Answer1 Action is Email</description>
        <errorConditionFormula>AND(ISPICKVAL(LVGO__Answer1_Action__c, &apos;Send Email&apos;),
                    ISBLANK(LVGO__Answer1_Response__c),$Setup.LVGO__LVGO_Automation_Switch__c.LVGO__Validations__c)</errorConditionFormula>
        <errorMessage>Answer1 Response is required if the Answer1 Action is &quot;Send Email&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LVGO__End_Date_cannot_be_less_the_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>LVGO__End_Date__c &lt;= LVGO__Start_Date__c</errorConditionFormula>
        <errorMessage>End Date should be greater than the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LVGO__File_Name_field_is_required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(LVGO__Campaign_Audience_Category__c, &apos;Custom Census File&apos;) , ISBLANK(LVGO__File_Name__c))</errorConditionFormula>
        <errorDisplayField>LVGO__File_Name__c</errorDisplayField>
        <errorMessage>File Name field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LVGO__Second_round_meter_message_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND (LVGO__Enable_Second_Round_Campaign__c, OR (ISNULL(LVGO__Second_Round_Campaign_Days_Delay__c), ISNULL(LVGO__Second_Round_Campaign_Start_Date__c)))</errorConditionFormula>
        <errorMessage>&quot;Second round meter message days&quot;  and  &quot;Second Round Campaign Start Date&quot; field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LVGO__Start_Date_cannot_be_in_the_past</fullName>
        <active>false</active>
        <description>Start Date cannot be in the past.</description>
        <errorConditionFormula>AND(OR(ISNEW(),
ISCHANGED(LVGO__Start_Date__c)),
NOT(ISBLANK(LVGO__Start_Date__c)),
LVGO__Start_Date__c &lt; TODAY())</errorConditionFormula>
        <errorMessage>Start Date cannot be in the past, please select a valid date.</errorMessage>
    </validationRules>
</CustomObject>